# tinym

./: CMakeLists.txt  README.md
src/: os.h  os_nix.c  os_win.c  test.c  test.h  x.asm
src/box/: main.c  os.c  os.h
src/sand/: cpu8086.c  cpu8086.h  mem.c  mem.h  ops.h
tinym/: os.h  os_nix.c  test.c  util.c  x
tinym/box/: main.c
tinym/sand/: cpu8086.c  mem.c
tinyvm/: a0001  a0001.asm  b0003  b0003.asm  c1234  c1234.asm  os.c  os.h  os_nix.c  os_tests.h  test.c  test.h  util.c  util.h  x.asm
tinyvm/box/: main.c
tinyvm/sand/: cpu8086.c  cpu8086.h  cpu8086_tests.h  mem.c  mem.h  mem_tests.h  modrm.h  ops.h
